--- a/src/main/resources/static/managerIndex.html
+++ b/src/main/resources/static/managerIndex.html
@@ -83,23 +83,23 @@
 					<a href="javascript:;" title="全区残疾人托养服务补贴资金申请明细">全区残疾人托养服务补贴资金申请明细</a>
 					<dl class="layui-nav-child">
 						<dd><a href="webApp/manager/subsidyStatistics.html" title="全区残疾人之家托养服务补贴资金统计">全区残疾人之家托养服务补贴资金统计</a></dd>
-						<dd><a href="javascript:;" title="残疾人托养服务补贴资金申请明细">残疾人托养服务补贴资金申请明细</a></dd>
+						<dd><a href="webApp/manager/subsidyApplication.html" title="残疾人托养服务补贴资金申请明细">残疾人托养服务补贴资金申请明细</a></dd>
 					</dl>
 				</li>
 				<li class="layui-nav-item">
 					<a href="javascript:;">机构信息填报</a>
 				</li>
 				<li class="layui-nav-item">
-					<a href="javascript:;">服务项目创建</a>
+					<a href="webApp/manager/createServiceItem.html">服务项目创建</a>
 				</li>
 				<li class="layui-nav-item">
-					<a href="javascript:;">残疾人分类</a>
+					<a href="webApp/manager/disabledClassifySubmit.html">残疾人分类</a>
 				</li>
 				<li class="layui-nav-item">
-					<a href="javascript:;">全区残疾人统计</a>
+					<a href="webApp/manager/disabledCountSubmit.html">全区残疾人统计</a>
 				</li>
 				<li class="layui-nav-item">
-					<a href="javascript:;">补贴资金申请</a>
+					<a href="webApp/manager/subsidyApplySubmit.html">补贴资金申请</a>
 				</li>
 			</ul>
 		</div>
