--- a/src/main/resources/static/webApp/manager/disabledHomeInfo.html
+++ b/src/main/resources/static/webApp/manager/disabledHomeInfo.html
@@ -52,22 +52,37 @@
 
 		table.render({
 			elem: '#mainTable',
-			url:'/demo/table/user/',
+			url:'/api/org/getPageByDistrict?sorts=id&'+("")+'district=雨花台区'+(""),
+        request: {
+                pageName: 'page', //页码的参数名称，默认：page
+                limitName: 'number' //每页数据量的参数名，默认：limit
+            }
+            , response: {
+            statusCode: 200 //重新规定成功的状态码为 200，table 组件默认为 0
+        },
+			parseData: function (res) { //将原始数据解析成 table 组件所规定的数据
+                return {
+                    "code": 200, //解析接口状态
+//                    "msg": res.message, //解析提示文本
+                    "count": res.pageSize, //解析数据长度
+                    "data": res.data //解析数据列表
+                };
+            },
 			cols: [[
-				{field:'id', width:80, title: '机构名称', sort: true},
-				{field:'username', width:80, title: '登记注册时间', sort: true},
+				{field:'name', width:80, title: '机构名称', sort: true},
+				{field:'registrationTime', width:80, title: '登记注册时间', sort: true},
 				{field:'sex', width:80, title: '注册证书编号', sort: true},
 				{field:'city', width:80, title: '注册部门', sort: true},
-				{field:'sign', title: '机构性质', minWidth: 150, sort: true},
+				{field:'nature', title: '机构性质', minWidth: 150, sort: true},
 				{field:'experience', width:80, title: '房屋产权性质', sort: true},
-				{field:'score', width:80, title: '机构面积', sort: true},
-				{field:'classify', width:80, title: '床位数', sort: true},
+				{field:'area', width:80, title: '机构面积', sort: true},
+				{field:'bedNum', width:80, title: '床位数', sort: true},
 				{field:'wealth', width:135, title: '庇护性劳动项目', sort: true},
-				{field:'wealth', width:135, title: '地址'},
-				{field:'wealth', width:135, title: '负责人', sort: true},
-				{field:'wealth', width:135, title: '性别', sort: true},
+				{field:'detailedAddress', width:135, title: '地址'},
+				{field:'personInCharge', width:135, title: '负责人', sort: true},
+				{field:'gender', width:135, title: '性别', sort: true},
 				{field:'wealth', width:135, title: '出生年月', sort: true},
-				{field:'wealth', width:135, title: '文化程度', sort: true},
+				{field:'education', width:135, title: '文化程度', sort: true},
 				{field:'wealth', width:135, title: '营业执照或登记证书'},
 				{field:'wealth', width:135, title: '银行开户许可'},
 				{field:'wealth', width:135, title: '门头及室内功能区域、无障碍设施'},
