index目录，机构信息填报
13

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -54,46 +54,37 @@
 			<ul class="layui-nav layui-nav-tree"  lay-filter="test">
 				<!--<li class="layui-nav-item"><a class="top" href="../index.html">首页</a></li>-->
 				<li class="layui-nav-item">
-					<a href="javascript:;">基本信息</a>
+					<a href="javascript:;">机构信息</a>
 					<dl class="layui-nav-child">
-						<dd><a href="webApp/oldInfo.html">老年人基本信息</a></dd>
-						<dd><a href="webApp/disabledInfo.html">残疾人信息</a></dd>
-						<dd><a href="webApp/nursingOrganizationInfo.html">养老机构信息</a></dd>
+						<dd><a href="webApp/manager/orgInfoSubmit.html">机构信息填报</a></dd>
 					</dl>
 				</li>
 				<li class="layui-nav-item">
-					<a href="javascript:;">评估信息</a>
+					<a href="javascript:;">残疾人信息</a>
 					<dl class="layui-nav-child">
-						<dd><a href="webApp/evaluaterInvestigate.html">评估人员信息 </a></dd>
-						<dd><a href="webApp/evaluateQuota.html">评估指标维护</a></dd>
-					</dl>
-				</li>
-				<!--<li class="layui-nav-item">-->
-				<!--<a href="javascript:;">评估信息</a>-->
-				<!--<dl class="layui-nav-child">-->
-				<!--<dd><a href="evaluateOrganizationInfo.html">评估机构信息</a></dd>-->
-				<!--<dd><a href="evaluateQuota.html">评估指标维护</a></dd>-->
-				<!--<dd><a href="">评估人员信息</a></dd>-->
-				<!--</dl>-->
-				<!--</li>-->
-				<!--<li class="layui-nav-item">-->
-				<!--<a href="javascript:;">能力评估</a>-->
-				<!--<dl class="layui-nav-child">-->
-				<!--<dd><a href="eva1.html">评估1</a></dd>-->
-				<!--<dd><a href="eva2.html">评估1</a></dd>-->
-				<!--</dl>-->
-				<!--</li>-->
-				<li class="layui-nav-item">
-					<a href="javascript:;">统计分析</a>
-					<dl class="layui-nav-child">
-						<dd><a href="webApp/oldHelp.html">统计分析</a></dd>
+						<dd><a href="webApp/disabledInfo.html">残疾人基础信息</a></dd>
+						<dd><a href="webApp/evaluateQuota.html">残疾人信息统计</a></dd>
 					</dl>
 				</li>
 				<li class="layui-nav-item">
-					<a href="javascript:;">系统管理</a>
+					<a href="javascript:;">服务项目</a>
 					<dl class="layui-nav-child">
-						<dd><a href="webApp/users.html">用户管理</a></dd>
-						<dd><a href="webApp/role.html">角色管理</a></dd>
+						<dd><a href="webApp/oldHelp.html">服务项目创建</a></dd>
+						<dd><a href="webApp/oldHelp.html">项目运行统计</a></dd>
+						<dd><a href="webApp/oldHelp.html">项目数据分析</a></dd>
+					</dl>
+				</li>
+				<li class="layui-nav-item">
+					<a href="javascript:;">残疾人托养服务补贴资金申请</a>
+					<dl class="layui-nav-child">
+						<dd><a href="webApp/users.html">补贴资金申请</a></dd>
+						<dd><a href="webApp/role.html">残疾人托养服务补贴资金申请汇总表</a></dd>
+					</dl>
+				</li>
+				<li class="layui-nav-item">
+					<a href="javascript:;">残疾人服务明细</a>
+					<dl class="layui-nav-child">
+						<dd><a href="webApp/users.html">残疾人服务明细</a></dd>
 					</dl>
 				</li>
 			</ul>
