--- a/src/main/resources/static/webApp/manager/disabledHomeInfo.html
+++ b/src/main/resources/static/webApp/manager/disabledHomeInfo.html
@@ -69,32 +69,32 @@
                 };
             },
 			cols: [[
-				{field:'name', width:80, title: '机构名称', sort: true},
-				{field:'registrationTime', width:80, title: '登记注册时间', sort: true},
-				{field:'sex', width:80, title: '注册证书编号', sort: true},
-				{field:'city', width:80, title: '注册部门', sort: true},
+				{field:'name', width:135, title: '机构名称', sort: true},
+				{field:'registrationTime', width:160, title: '登记注册时间', sort: true},
+				{field:'registrationCertificateNumber', width:135, title: '注册证书编号', sort: true},
+				{field:'registrationDepartment', width:80, title: '注册部门', sort: true},
 				{field:'nature', title: '机构性质', minWidth: 150, sort: true},
-				{field:'experience', width:80, title: '房屋产权性质', sort: true},
+				{field:'natureOfHousingPropertyRight', width:135, title: '房屋产权性质', sort: true},
 				{field:'area', width:80, title: '机构面积', sort: true},
 				{field:'bedNum', width:80, title: '床位数', sort: true},
-				{field:'wealth', width:135, title: '庇护性劳动项目', sort: true},
+				{field: 'asylumLaborProjects', width:135, title: '庇护性劳动项目', sort: true},
 				{field:'detailedAddress', width:135, title: '地址'},
 				{field:'personInCharge', width:135, title: '负责人', sort: true},
 				{field:'gender', width:135, title: '性别', sort: true},
-				{field:'wealth', width:135, title: '出生年月', sort: true},
+				{field:'birthMonth', width:135, title: '出生年月', sort: true},
 				{field:'education', width:135, title: '文化程度', sort: true},
 				{field:'wealth', width:135, title: '营业执照或登记证书'},
-				{field:'wealth', width:135, title: '银行开户许可'},
+				{field:'openBankAccountPermitCertificate', width:135, title: '银行开户许可'},
 				{field:'wealth', width:135, title: '门头及室内功能区域、无障碍设施'},
-				{field:'wealth', width:135, title: '管理制度'},
-				{field:'wealth', width:135, title: '服务项目总数', sort: true},
-				{field:'wealth', width:135, title: '总服务人数', sort: true},
+				{field:'managementSystem', width:135, title: '管理制度'},
+				{field:'projectSum', width:135, title: '服务项目总数', sort: true},
+				{field:'applySum', width:135, title: '总服务人数', sort: true},
 				{field:'wealth', width:135, title: '总服务人次', sort: true},
 				{field:'wealth', width:135, title: '总服务时长', sort: true},
 				{field:'wealth', width:135, title: '平均服务时长', sort: true},
-				{field:'wealth', width:135, title: '提交人'},
-				{field:'wealth', width:135, title: '提交时间', sort: true},
-				{field:'wealth', width:135, title: '更新时间', sort: true},
+				{field:'adminName', width:135, title: '提交人'},
+				{field:'createTime', width:135, title: '提交时间', sort: true},
+				{field:'lastModifyTime', width:135, title: '更新时间', sort: true},
 			]]
 			,page: true
 		});
