目录结构调整
123

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -63,13 +63,12 @@
 					<a href="javascript:;">残疾人信息</a>
 					<dl class="layui-nav-child">
 						<dd><a href="webApp/disabledInfo.html">残疾人基础信息</a></dd>
-						<dd><a href="webApp/evaluateQuota.html">残疾人信息统计</a></dd>
 					</dl>
 				</li>
 				<li class="layui-nav-item">
 					<a href="javascript:;">服务项目</a>
 					<dl class="layui-nav-child">
-						<dd><a href="webApp/oldHelp.html">服务项目创建</a></dd>
+						<dd><a href="webApp/createServiceItemOrg.html">服务项目创建</a></dd>
 						<dd><a href="webApp/oldHelp.html">项目运行统计</a></dd>
 						<dd><a href="webApp/oldHelp.html">项目数据分析</a></dd>
 					</dl>
@@ -77,14 +76,8 @@
 				<li class="layui-nav-item">
 					<a href="javascript:;">残疾人托养服务补贴资金申请</a>
 					<dl class="layui-nav-child">
-						<dd><a href="webApp/users.html">补贴资金申请</a></dd>
-						<dd><a href="webApp/role.html">残疾人托养服务补贴资金申请汇总表</a></dd>
-					</dl>
-				</li>
-				<li class="layui-nav-item">
-					<a href="javascript:;">残疾人服务明细</a>
-					<dl class="layui-nav-child">
-						<dd><a href="webApp/users.html">残疾人服务明细</a></dd>
+						<dd><a href="webApp/subsidyApplySubmit.html">补贴资金申请</a></dd>
+						<dd><a href="webApp/subsidyApplyOrg.html">残疾人托养服务补贴资金申请汇总表</a></dd>
 					</dl>
 				</li>
 			</ul>
