--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -102,7 +102,7 @@
         //iframe 路由切换
         var menuUrl = sessionStorage.menuUrl;
         if(!menuUrl){
-            menuUrl="webApp/oldInfo.html"
+            menuUrl="webApp/disabledInfo.html"
         }
         $("#mainPage").attr("src", menuUrl);
         //添加选中下划线
