--- a/src/main/resources/static/managerIndex.html
+++ b/src/main/resources/static/managerIndex.html
@@ -56,8 +56,8 @@
 				<li class="layui-nav-item">
 					<a href="javascript:;">残疾人服务大数据分析</a>
 					<dl class="layui-nav-child">
-						<dd><a href="javascript:;">领导驾驶舱</a></dd>
-						<dd><a href="javascript:;">残疾人服务项目分析</a></dd>
+						<dd><a href="webApp/manager/cockpit.html">领导驾驶舱</a></dd>
+						<dd><a href="webApp/manager/serviceAnalyze.html">残疾人服务项目分析</a></dd>
 						<dd><a href="javascript:;">残疾人之家分析</a></dd>
 					</dl>
 				</li>
