--- a/src/main/resources/static/webApp/createServiceItemOrg.html
+++ b/src/main/resources/static/webApp/createServiceItemOrg.html
@@ -28,7 +28,7 @@
 	<div class="layui-form-item">
 		<label class="layui-form-label">残疾人服务内容大类</label>
 		<div class="layui-input-inline">
-			<select name="city" lay-verify="required">
+			<select name="projectTypeId" lay-verify="required">
 				<option value="">请选择</option>
 				<option value="0">日间照料</option>
 				<option value="1">辅助性就业</option>
@@ -44,7 +44,7 @@
 	<div class="layui-form-item">
 		<label class="layui-form-label">创建项目名称</label>
 		<div class="layui-input-inline">
-			<input type="text" name="title" required  lay-verify="required" placeholder="请输入项目名称" autocomplete="off" class="layui-input">
+			<input type="text" name="name" required  lay-verify="required" placeholder="请输入项目名称" autocomplete="off" class="layui-input">
 		</div>
 	</div>
 
@@ -57,14 +57,14 @@
 	<div class="layui-form-item">
 		<label class="layui-form-label">项目负责人</label>
 		<div class="layui-input-inline">
-			<input type="text" name="title" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
+			<input type="text" name="leader" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
 		</div>
 	</div>
 
 	<div class="layui-form-item">
 		<label class="layui-form-label">项目简介</label>
 		<div class="layui-input-inline">
-			<input type="text" name="title" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
+			<input type="text" name="description" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
 		</div>
 	</div>
 
@@ -75,6 +75,7 @@
 				<button type="button" class="layui-btn" id="test1">
 					<i class="layui-icon">&#xe67c;</i>选择文件
 				</button>
+
 			</div>
 		</div>
 	</div>
@@ -83,13 +84,13 @@
 	<div class="layui-form-item">
 		<label class="layui-form-label">项目开始时间</label>
 		<div class="layui-input-inline">
-			<input type="text" name="title" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
+			<input type="text" name="startTime" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
 		</div>
 	</div>
 	<div class="layui-form-item">
 		<label class="layui-form-label">项目结束时间</label>
 		<div class="layui-input-inline">
-			<input type="text" name="title" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
+			<input type="text" name="endTime" required  lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input">
 		</div>
 	</div>
 
@@ -108,8 +109,21 @@
 
 
 <script>
-	layui.use('form', function(){
+	layui.use(['laydate','form','upload'], function(){
 		var form = layui.form;
+        var upload = layui.upload;
+
+        //执行实例
+        var uploadInst = upload.render({
+            elem: '#test1' //绑定元素
+            ,url: '/api/file/upload' //上传接口
+            ,done: function(res){
+                //上传完毕回调
+            }
+            ,error: function(){
+                //请求异常回调
+            }
+        });
 
 		//监听提交
 		form.on('submit(formDemo)', function(data){
