--- a/src/main/resources/static/webApp/disabledInfo.html
+++ b/src/main/resources/static/webApp/disabledInfo.html
@@ -155,7 +155,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">家庭住址</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="number" name="address" lay-verify="required" placeholder="请输入家庭住址" autocomplete="off"
+				<input type="text" name="address" lay-verify="required" placeholder="请输入家庭住址" autocomplete="off"
 					   class="layui-input">
 			</div>
 		</div>
