--- a/src/main/resources/static/managerIndex.html
+++ b/src/main/resources/static/managerIndex.html
@@ -58,7 +58,7 @@
 					<dl class="layui-nav-child">
 						<dd><a href="webApp/manager/cockpit.html">领导驾驶舱</a></dd>
 						<dd><a href="webApp/manager/serviceAnalyze.html">残疾人服务项目分析</a></dd>
-						<dd><a href="javascript:;">残疾人之家分析</a></dd>
+						<dd><a href="webApp/manager/homeAnalyze.html">残疾人之家分析</a></dd>
 					</dl>
 				</li>
 				<li class="layui-nav-item">
@@ -94,7 +94,7 @@
 					<a href="webApp/manager/disabledCountSubmit.html">全区残疾人统计</a>
 				</li>
 				<li class="layui-nav-item">
-					<a href="webApp/manager/subsidyApplySubmit.html">补贴资金申请</a>
+					<a href="webApp/subsidyApplySubmit.html">补贴资金申请</a>
 				</li>
 			</ul>
 		</div>
