--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -149,7 +149,7 @@
                     console.log(data);
                     if (data.msg == "成功") {
                         if(data.data.adminType.id == "1"){
-                            window.location.href = "managerINdex.html";
+                            window.location.href = "managerIndex.html";
                             sessionStorage.setItem("menuUrl","webApp/manager/cockpit.html");
                         }else {
                             window.location.href = "index.html";
